一部assetsをモジュールに変更

--- a/index-debug.html
+++ b/index-debug.html
@@ -11,6 +11,8 @@
     <script type="importmap">
       {
         "imports": {
+          "@haiix/tcomponent": "./node_modules/@haiix/tcomponent/TComponent.mjs",
+          "@haiix/seq": "./node_modules/@haiix/seq/seq.mjs",
           "codemirror": "./node_modules/codemirror/src/codemirror.js",
           "codemirror/": "./node_modules/codemirror/",
           "codemirror/lib/codemirror.css": "data:text/javascript,",
