読み込みタイミング変更

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <script defer src="./dist/main.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/@zip.js/zip.js@2.3.18/dist/zip.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/@zip.js/zip.js@2.3.18/dist/zip.min.js"></script>
     <script nomodule>
       document.writeln('お使いのブラウザはサポートしていません。')
     </script>
