--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="コードエディターです。" />
     <meta name="theme-color" content="#eeeeee" />
     <title>Haiix Editor</title>
-    <link rel="manifest" href="app.webmanifest" />
-    <link rel="icon" href="icons/icon-32.png" />
-    <link rel="apple-touch-icon" href="icons/icon-192.png" />
+    <link rel="manifest" href="./resources/app.webmanifest" />
+    <link rel="icon" href="./resources/icons/icon-32.png" />
+    <link rel="apple-touch-icon" href="./resources/icons/icon-192.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons&amp;display=swap" />
   </head>
   <body>
