--- a/index-debug.html
+++ b/index-debug.html
@@ -28,6 +28,7 @@
       window.CodeMirror = CodeMirror
     </script>
     <script type="module" src="./src/index.mjs"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/@zip.js/zip.js@2.3.18/dist/zip.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/@zip.js/zip.js@2.3.18/dist/zip.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/typescript@4.6.4/lib/typescript.min.js"></script>
   </body>
 </html>
