--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <script defer src="./dist/main.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/@zip.js/zip.js@2.3.18/dist/zip.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/typescript@4.6.4/lib/typescript.min.js"></script>
     <script nomodule>
       document.writeln('お使いのブラウザはサポートしていません。')
     </script>
