zip.jsをnpmで読み込むように変更

--- a/index-debug.html
+++ b/index-debug.html
@@ -12,6 +12,7 @@
         "imports": {
           "@haiix/tcomponent": "./node_modules/@haiix/tcomponent/TComponent.mjs",
           "@haiix/seq": "./node_modules/@haiix/seq/seq.mjs",
+          "@zip.js/zip.js": "./node_modules/@zip.js/zip.js/index.js",
           "codemirror": "./node_modules/codemirror/src/codemirror.js",
           "codemirror/": "./node_modules/codemirror/",
           "codemirror/lib/codemirror.css": "data:text/javascript,",
@@ -28,6 +29,5 @@
       window.CodeMirror = CodeMirror
     </script>
     <script type="module" src="./src/index.mjs"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/@zip.js/zip.js@2.3.18/dist/zip.min.js"></script>
   </body>
 </html>
