コード整理

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <link rel="apple-touch-icon" href="./resources/icons/icon-192.png" />
   </head>
   <body>
-    <script defer src="./dist/main.js"></script>
-    <script nomodule>
-      document.writeln('お使いのブラウザはサポートしていません。')
-    </script>
+    <script src="./dist/main.js"></script>
+    <script nomodule>document.writeln('お使いのブラウザはサポートしていません。')</script>
+    <noscript>お使いのブラウザはサポートしていません。</noscript>
   </body>
 </html>
