Zipの日本語ファイル名対応

--- a/index-debug.html
+++ b/index-debug.html
@@ -13,6 +13,7 @@
           "@haiix/tcomponent": "./node_modules/@haiix/tcomponent/TComponent.mjs",
           "@haiix/seq": "./node_modules/@haiix/seq/seq.mjs",
           "@zip.js/zip.js": "./node_modules/@zip.js/zip.js/index.js",
+          "encoding-japanese": "https://cdn.skypack.dev/encoding-japanese",
           "codemirror": "./node_modules/codemirror/src/codemirror.js",
           "codemirror/": "./node_modules/codemirror/",
           "codemirror/lib/codemirror.css": "data:text/javascript,",
