メッセージ変更

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <body>
     <script src="./dist/main.js"></script>
     <script nomodule>document.writeln('お使いのブラウザはサポートしていません。')</script>
-    <noscript>お使いのブラウザはサポートしていません。</noscript>
+    <noscript>JavaScript が無効のため表示できません。</noscript>
   </body>
 </html>
