フォントファイルの事前読み込み

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="manifest" href="./resources/app.webmanifest" />
     <link rel="icon" href="./resources/icons/icon-32.png" />
     <link rel="apple-touch-icon" href="./resources/icons/icon-192.png" />
+    <link rel="preload" as="font" href="./resources/vendor/MaterialIcons-Regular.ttf" crossorigin />
   </head>
   <body>
     <script src="./dist/main.js"></script>
