新規作成時のモジュールテンプレート追加

--- a/index-debug.html
+++ b/index-debug.html
@@ -35,6 +35,7 @@
           await import('./src/index.mjs')
         } catch (error) {
           document.body.textContent = error.stack
+          throw error
         }
       }())
     </script>
