index-debugのimportエラー解消

--- a/index-debug.html
+++ b/index-debug.html
@@ -11,11 +11,11 @@
           "@haiix/tcomponent": "./node_modules/@haiix/tcomponent/TComponent.mjs",
           "@haiix/seq": "./node_modules/@haiix/seq/seq.mjs",
           "@zip.js/zip.js": "./node_modules/@zip.js/zip.js/index.js",
-          "encoding-japanese": "https://cdn.skypack.dev/encoding-japanese"
+          "monaco-editor/esm/vs/editor/editor.api.js": "./src/index-debug.importmap.mjs"
         }
       }
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
     <script src="./node_modules/monaco-editor/min/vs/loader.js"></script>
     <script type="module">
       require.config({ paths: { vs: './node_modules/monaco-editor/min/vs' } })
