--- a/index-debug.html
+++ b/index-debug.html
@@ -11,7 +11,8 @@
           "@haiix/tcomponent": "./node_modules/@haiix/tcomponent/TComponent.mjs",
           "@haiix/seq": "./node_modules/@haiix/seq/seq.mjs",
           "@zip.js/zip.js": "./node_modules/@zip.js/zip.js/index.js",
-          "monaco-editor/esm/vs/editor/editor.api.js": "./src/index-debug.importmap.mjs"
+          "monaco-editor/esm/vs/editor/editor.api.js": "./src/index-debug.importmap.mjs",
+          "typescript": "./src/index-debug.importmap.mjs"
         }
       }
     </script>
@@ -19,7 +20,7 @@
     <script src="./node_modules/monaco-editor/min/vs/loader.js"></script>
     <script type="module">
       require.config({ paths: { vs: './node_modules/monaco-editor/min/vs' } })
-      require(['vs/editor/editor.main'], function () {
+      require(['vs/editor/editor.main', './node_modules/typescript/lib/typescript.js'], function () {
         ;(async function () {
           try {
             await import('./src/index.mjs')
